# embedded-midi

./: .gitignore  Cargo.toml  README.md
.run/: build default.run.xml  build defmt.run.xml
src/: lib.rs  message.rs  note.rs  packet.rs  parser.rs  ports.rs  status.rs  u14.rs  u4.rs  u6.rs  u7.rs
