[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2021"
name = "embedded-midi"
readme = "README.md"
version = "0.1.0"

[dependencies]
heapless = "0.7"
num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }

defmt = { version= "0.3", optional = true }

[features]
default = []
