[package]
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2021"
name = "embedded-midi"
readme = "README.md"
version = "0.1.0"

[dependencies]
heapless = "0.7"
num_enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }
nb = "1.0"
hash32 = "0.2"
spin = { path = "../spin-rs", features = ["portable_atomic"] }

defmt = { version = "0.3", optional = true }

[dev-dependencies]
# FIXME understand how this shit works
defmt = { version = "0.3", optional = false }

[features]
default = []
defmt = ["dep:defmt", "heapless/defmt"]
